BusOne/src/objects/Call2_vod__c.object
<CustomObject>
    <description>This object stores the main call header information. There is one call row for every account or contact on the call. A group call with 3 doctors will produce 4 call rows.</description>
    <fields>
        <fullName>ASSMCA_vod__c</fullName>
        <description>The ASSMCA # is a license number when sampling controlled substances for a Puerto Rican-based Physician.</description>
        <label>ASSMCA</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Plan_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to account plan associated with this call. This field is optional.</description>
        <label>Account Plan</label>
        <referenceTo>Account_Plan_vod__c</referenceTo>
        <relationshipLabel>Calls</relationshipLabel>
        <relationshipName>Call2_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the account that the call is associated with.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Calls (Account)</relationshipLabel>
        <relationshipName>Call2_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Activity_Type__c</fullName>
        <description>Activity type sample field (e.g. General Meeting, Contracts Discussion or Tactical Discussion...) for this call.</description>
        <label>Activity Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>General Meeting</fullName>
                </value>
                <value>
                    <fullName>Contracts Discussion</fullName>
                </value>
                <value>
                    <fullName>Tactical Discussion</fullName>
                </value>
                <value>
                    <fullName>Marketing Program</fullName>
                </value>
                <value>
                    <fullName>Disease Management</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Add_Detail_vod__c</fullName>
        <description>Field used to assist in the creation of Call2 Detail records to a Call2 record. The 18-digit Product Ids are ordered from left to right and are comma-delimited. The field will be blanked out after each save.  A trigger on Call2 Header will parse the delimited list and create Call2 Detail records for the Call2 record with priorities set from left to right.  This field is intended to assist in the creation of the child Call2 Detail records, but is not required for loading data.
E.g., A00T0000000HFNHYET,A00T0000000HFNOYER</description>
        <label>Add Detail</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Add_Key_Message_vod__c</fullName>
        <description>Field used to assist in the creation of Call2 Key Message records for a Call2 record. Input format is a list delimited by &quot;;;;&quot; of the following five fields (the last two, though, are optional) that are separated by &quot;@@&quot; - &lt;Key_Message_ID&gt;@@&lt;Product_ID&gt;@@&lt;Reaction&gt;@@&lt;Category&gt;@@&lt;Vehicle&gt;. An example would be &quot;Key Message Id 1@@Product ID 1@@Reaction 1;;;Key Message Id 2@@Product ID 1@@Reaction 2@@Category 2@@Vehicle 2&quot;. A trigger on Call2 Header will parse the delimited lists and create Call2 Key Message records for the Call2 record.  This field is intended to assist in the creation of the child Call2 Key Message records, but is not required for loading data.</description>
        <label>Add Key Message</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Address_Line_1_vod__c</fullName>
        <description>Address Line 1 of the Call Address. This field should not be displayed on the Page Layout.</description>
        <label>Address Line 1</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line_2_vod__c</fullName>
        <description>Address Line 2 of the Call Address.  This field should not be displayed on the Page Layout.</description>
        <label>Address Line 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_vod__c</fullName>
        <description>A field used to denormalize the address information associated with a call. This aids in data loading and displaying information on related lists.</description>
        <label>Address</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Allowed_Products_vod__c</fullName>
        <description>When populated, only listed products will be detail-able when a rep views this call.  The format is a double semi-colon delimited list of Product Names. These will be textual Product Catalog records of type = Detail. For example,  Cholecap;;Labrinone.</description>
        <inlineHelpText>When populated, only listed products will be detail-able when a rep views this call.  The format is a double semi-colon delimited list of Product Names. These will be textual Product Catalog records of type = Detail. For example,  Cholecap;;Labrinone.</inlineHelpText>
        <label>Allowed Products</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Assigner_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to User Id that assigned the call to its owner</description>
        <inlineHelpText>Lookup to User Id that assigned the call to its owner</inlineHelpText>
        <label>Assigner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Assigner_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assignment_Datetime_vod__c</fullName>
        <description>Date and time of when the call was assigned to a user</description>
        <inlineHelpText>Date and time of when the call was assigned to a user</inlineHelpText>
        <label>Assignment Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Attendee_Post_Status_vod__c</fullName>
        <description>This field was included as an option in v14. It is no longer being utilized in the current version of the integration and is not part of the standard connector.</description>
        <label>Attendee Post Status</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attendee_Type_vod__c</fullName>
        <description>The type of entity who the call is created for. This field is used in reporting. For performance reasons, this is not set by an APEX  trigger. For data import, this field should be set correctly otherwise reports that depend on this field may not run correctly.</description>
        <label>Attendee Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Group_Account_vod</fullName>
                </value>
                <value>
                    <fullName>Contact_vod</fullName>
                </value>
                <value>
                    <fullName>Person_Account_vod</fullName>
                </value>
                <value>
                    <fullName>User_vod</fullName>
                </value>
                <value>
                    <fullName>Event_vod</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Attendee_list_vod__c</fullName>
        <description>This text field is a semi colon delimited list of Non-HCP attendees who were on this call. This text field can be displayed in Concur so that the User can then match to other Non-HCPs later.</description>
        <label>Other Non-HCP Attendees</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Attendees_vod__c</fullName>
        <description>The total number of attendees for this call. For a group call with four doctors, this would be &quot;3&quot; for the parent call associated to the parent account and &quot;0&quot; for the child calls.  For performance reasons, this is not set via a trigger.</description>
        <label>Attendees</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CDS_Expiration_Date_vod__c</fullName>
        <description>The expiration date of the CDS registration number for the call.</description>
        <label>CDS Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CDS_vod__c</fullName>
        <description>The CDS registration number for the corresponding state of the call address.</description>
        <label>CDS #</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLM_Location_Latitude_vod__c</fullName>
        <description>Stores the latitude coordinate of the location where the key message is shown</description>
        <inlineHelpText>Stores the latitude coordinate of the location where the key message is shown</inlineHelpText>
        <label>CLM Location Latitude</label>
        <precision>15</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CLM_Location_Longitude_vod__c</fullName>
        <description>Stores the longitude coordinate of the location where the key message is shown</description>
        <inlineHelpText>Stores the longitude coordinate of the location where the key message is shown</inlineHelpText>
        <label>CLM Location Longitude</label>
        <precision>15</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CLM_Location_Services_Status_vod__c</fullName>
        <description>Indicates the state of location services at the time the key messages is shown.
Enabled_vod - location services are turned on and the system is able to get the user&apos;s location
Disabled_vod - location services are turned off
No_connection_vod - no network connection</description>
        <label>CLM Location Services Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Enabled_vod</fullName>
                </value>
                <value>
                    <fullName>Disabled_vod</fullName>
                </value>
                <value>
                    <fullName>No_connection_vod</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CLM_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked indicates CLM has been run for this call and the call contents were populated from CLM.</description>
        <label>CLM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Call_Comments_vod__c</fullName>
        <description>Free text comments for call.</description>
        <label>Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Call_Date_vod__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>The date of the call when it was first saved or submitted. This field is set via a trigger to the current date if neither the date or datetime field is supplied.</description>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Call_Datetime_vod__c</fullName>
        <description>The time when the rep specified for the call unless the call was signed, in which case this is the signature time.  This field is optional for users who which to plan their calls down to a specific hour or minute.  If a datetime is specified, a corresponding salesforce.com event is created via a trigger for calendar integration.</description>
        <label>Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Call_Type_vod__c</fullName>
        <description>Type of call which is system maintained based on the type and contents of the call. This field is used for reporting purposes. Valid values are:  Detail Only, Detail with Sample, Group Detail, Group Detail with Sample, Sample Only. These values should not be changed, but the translations for these picklists may be changed.  Attendees have the same call type as the header call. For a Group call with 3 professionals, all 4 records have the call type of &quot;Group Detail&quot;</description>
        <label>Call Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Detail Only</fullName>
                </value>
                <value>
                    <fullName>Detail with Sample</fullName>
                </value>
                <value>
                    <fullName>Group Detail</fullName>
                </value>
                <value>
                    <fullName>Group Detail with Sample</fullName>
                </value>
                <value>
                    <fullName>Sample Only</fullName>
                </value>
                <value>
                    <fullName>Call Only</fullName>
                </value>
                <value>
                    <fullName>Event Only</fullName>
                </value>
                <value>
                    <fullName>Event Detail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Check_In_Latitude_vod__c</fullName>
        <description>Captures latitude on check in</description>
        <label>Check In Latitude</label>
        <precision>15</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Check_In_Location_Services_Status_vod__c</fullName>
        <description>Captures device Location Services status.
Enabled_vod – location services are turned on and the system is able to get the user&apos;s location.
Disabled_vod – location services are turned off.
No_Connection_vod – no network connection.</description>
        <label>Check In Location Services Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Enabled_vod</fullName>
                </value>
                <value>
                    <fullName>Disabled_vod</fullName>
                </value>
                <value>
                    <fullName>No_connection_vod</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Check_In_Longitude_vod__c</fullName>
        <description>Captures longitude on check in</description>
        <label>Check In Longitude</label>
        <precision>15</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Check_In_Status_vod__c</fullName>
        <description>Captures check in status.
Checked_In_vod - GPS coordinates were captured.
Not_Checked_In_vod - GPS coordinates could not be captured.</description>
        <label>Check In Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Checked_In_vod</fullName>
                </value>
                <value>
                    <fullName>Not_Checked_In_vod</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Check_In_Timestamp_vod__c</fullName>
        <description>Captures check in date and time</description>
        <label>Check In Timestamp</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Child_Account_Id_vod__c</fullName>
        <description>The textual ID of the Child Account value maintained in the Child_Account_vod field.</description>
        <label>Child Account Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Child_Account_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>When using the Child Account feature, maintains the Child Account record that holds the relationship between the Person Account and the Location of the Call for Person Calls using Call Location and Group Calls with Attendees.</description>
        <label>Child Account</label>
        <referenceTo>Child_Account_vod__c</referenceTo>
        <relationshipLabel>Calls</relationshipLabel>
        <relationshipName>Calls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>City_vod__c</fullName>
        <description>City of the Call Address.  This field should not be displayed on the Page Layout.</description>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cobrowse_MC_Activity_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Stores the reference to the CoBrowse Multichannel Activity header record</description>
        <label>CoBrowse Activity</label>
        <referenceTo>Multichannel_Activity_vod__c</referenceTo>
        <relationshipName>Call2_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cobrowse_MC_Session_vod__c</fullName>
        <description>Stores the MC Engine CoBrowse unique identifier</description>
        <label>CoBrowse Session</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cobrowse_Presentation_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Stores the CoBrowse presentation selected for this Call</description>
        <label>Presentation</label>
        <referenceTo>Content_Deployment_vod__c</referenceTo>
        <relationshipName>Call2_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cobrowse_URL_Participant_vod__c</fullName>
        <description>Stores the CoBrowse URL for the participant</description>
        <label>Participant URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cobrowse_URL_Presenter_vod__c</fullName>
        <description>Stores the CoBrowse URL for the presenter</description>
        <label>Presenter URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Color_vod__c</fullName>
        <description>The user-selectable color for a call, as visible in VMobile.</description>
        <label>Color</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Gray</fullName>
                </value>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Orange</fullName>
                </value>
                <value>
                    <fullName>Peach</fullName>
                </value>
                <value>
                    <fullName>Teal</fullName>
                </value>
                <value>
                    <fullName>Olive</fullName>
                </value>
                <value>
                    <fullName>Blue</fullName>
                </value>
                <value>
                    <fullName>Purple</fullName>
                </value>
                <value>
                    <fullName>Maroon</fullName>
                </value>
                <value>
                    <fullName>Steel</fullName>
                </value>
                <value>
                    <fullName>DarkSteel</fullName>
                </value>
                <value>
                    <fullName>DarkGray</fullName>
                </value>
                <value>
                    <fullName>Black</fullName>
                </value>
                <value>
                    <fullName>DarkRed</fullName>
                </value>
                <value>
                    <fullName>DarkOrange</fullName>
                </value>
                <value>
                    <fullName>DarkPeach</fullName>
                </value>
                <value>
                    <fullName>DarkYellow</fullName>
                </value>
                <value>
                    <fullName>DarkGreen</fullName>
                </value>
                <value>
                    <fullName>DarkTeal</fullName>
                </value>
                <value>
                    <fullName>DarkOlive</fullName>
                </value>
                <value>
                    <fullName>DarkBlue</fullName>
                </value>
                <value>
                    <fullName>DarkPurple</fullName>
                </value>
                <value>
                    <fullName>DarkMaroon</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Concur_Report_Name_vod__c</fullName>
        <label>Concur Report Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the contact (if any) that the call is associated with.</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Calls (Contacts)</relationshipLabel>
        <relationshipName>Call2_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Credentials_vod__c</fullName>
        <description>The credentials of the Account signing for a sample</description>
        <label>Credentials</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DEA_Address_Line_1_vod__c</fullName>
        <description>Address Line 1 of the DEA Address.</description>
        <label>DEA Address Line 1</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DEA_Address_Line_2_vod__c</fullName>
        <description>Address Line 2 of the DEA Address.</description>
        <label>DEA Address Line 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DEA_Address_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The DEA Address is a reference field to the Address record where the Controlled Substance has been sampled or shipped.  This reference value will be removed if the Address record is deleted.</description>
        <label>DEA Address</label>
        <referenceTo>Address_vod__c</referenceTo>
        <relationshipLabel>Calls (DEA Address)</relationshipLabel>
        <relationshipName>Calls1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DEA_City_vod__c</fullName>
        <description>City of the DEA Address.</description>
        <label>DEA City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DEA_Expiration_Date_vod__c</fullName>
        <description>DEA Expiration Date of the Physician&apos;s DEA License that received the controlled substance.</description>
        <label>DEA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DEA_State_vod__c</fullName>
        <description>State of the DEA Address.</description>
        <label>DEA State</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DEA_Zip_4_vod__c</fullName>
        <description>Zip Code 4 of the DEA Address.</description>
        <label>DEA Zip 4</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DEA_Zip_vod__c</fullName>
        <description>Zip Code of the DEA Address.</description>
        <label>DEA Zip</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DEA_vod__c</fullName>
        <description>The DEA # is the DEA License # of the Physician that received the Samples.</description>
        <label>DEA #</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Detailed_Products_vod__c</fullName>
        <description>A helper field to display the list of detailed products for a call. Product names should be delimited by double-spaces and order in priority from left to right. This field does not control processing and is included to make related lists and reports more user friendly.</description>
        <label>Detailed Products</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Disbursed_To_vod__c</fullName>
        <description>Used to record sample disbursement information (if any). This contains all PDMA required fields (name, address, etc.) in text format. This value is copied in to the sample transaction object via a trigger. It is maintained on call header for synchronization purposes.</description>
        <label>Disbursed To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Disbursement_Order_Created_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>System field used to indicate that Sample Disbursement and/or Sample Order Transaction records were created for associated Call Sample records.</description>
        <label>Disbursement Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disclaimer_vod__c</fullName>
        <description>Used to record sample disclaimer used if a disbursement was made. This value is copied in to the sample transaction object via a trigger. It is maintained on call header for synchronization purposes.</description>
        <label>Disclaimer</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Duration_vod__c</fullName>
        <description>Duration of the call in minutes.</description>
        <label>Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EM_Event_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to associate a call report with a Veeva Event Management event.</description>
        <label>EM Event</label>
        <referenceTo>EM_Event_vod__c</referenceTo>
        <relationshipLabel>Calls</relationshipLabel>
        <relationshipName>Call2_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Entity_Display_Name_vod__c</fullName>
        <description>Entity&apos;s displayed name</description>
        <formula>IF( LEN( TRIM(Account_vod__c)) &gt; 0, Account_vod__r.Formatted_Name_vod__c ,              
IF(LEN( TRIM(Contact_vod__c))  &gt;0, Contact_vod__r.FirstName &amp; &quot; &quot; &amp;  Contact_vod__r.LastName,                   
IF(LEN( TRIM(User_vod__c))  &gt;0,    User_vod__r.FirstName &amp; &quot; &quot; &amp;  User_vod__r.LastName ,
IF(LEN( TRIM(Medical_Event_vod__c ))  &gt;0,    Medical_Event_vod__r.Name , &quot;&quot;))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Entity Display Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity_Reference_Id_vod__c</fullName>
        <description>For Internal Use Only</description>
        <label>Entity Reference Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Reference_Call_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Indicates the call this call is a duplicate of.</description>
        <label>Error Reference Call</label>
        <referenceTo>Call2_vod__c</referenceTo>
        <relationshipLabel>Calls (Error Reference Call)</relationshipLabel>
        <relationshipName>Calls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Expense_Amount_vod__c</fullName>
        <description>Holds the number of amount of the expense on this call</description>
        <label>Expense Amount</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expense_Attendee_Type_vod__c</fullName>
        <description>The Expense Attendee Type is meant to be placed in the Attendee Specific Fields section of the Call Report page layout. The values of this picklist should match the values available in the third-party expense system, such as Concur.</description>
        <label>Expense Attendee Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BUSGUEST</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expense_Post_Status_vod__c</fullName>
        <description>Holds a Success or Fail status based on the attempt to post this status into Concur.  If the expense was not yet posted, status = null</description>
        <label>Expense Post Status</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expense_Receipt_Status_vod__c</fullName>
        <description>Stores Expense Receipts status after posting to Concur. Success or Fail based on the attempt to post to Concur. If it is not posted yet, it is Null.</description>
        <label>Expense Receipt Status</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expense_System_External_ID_vod__c</fullName>
        <description>The ID that maps to the expense management system</description>
        <label>Expense System ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incurred_Expense_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Attendees with the Incurred Expense button checked will be posted as Attendees to Concur.</description>
        <label>Incurred Expense</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Parent_Call_vod__c</fullName>
        <description>Formula Field to determine if the Call record is the Parent Call or an Attendee Call record.  1 indicates that the record is the Parent Call.  0 indicates that it is an Attendee Call.</description>
        <formula>IF(LEN( Parent_Call_vod__c )&gt;0, 0,1)</formula>
        <label>Is Parent Call?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Sampled_Call_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if this call header designates the account that received samples for the call.</description>
        <label>Is Sampled Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Device_vod__c</fullName>
        <description>This field is used to track the last device used to save a call. You can build reports using this field to determine what devices are being used to record calls.</description>
        <label>Last Device</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>WinModern_vod</fullName>
                </value>
                <value>
                    <fullName>Data_Load_vod</fullName>
                </value>
                <value>
                    <fullName>iPhone_vod</fullName>
                </value>
                <value>
                    <fullName>Mobile_vod</fullName>
                </value>
                <value>
                    <fullName>Online_vod</fullName>
                </value>
                <value>
                    <fullName>Tablet_vod</fullName>
                </value>
                <value>
                    <fullName>Blackberry_vod</fullName>
                </value>
                <value>
                    <fullName>iPad_vod</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>License_Expiration_Date_vod__c</fullName>
        <description>The License Expiration Date field stores the Practitioner&apos;s State License Expiration Date that signed for Samples.</description>
        <label>License Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>License_Status_vod__c</fullName>
        <description>The License Status field stores the current Status of the Practitioner&apos;s State License at the time the Signature was captured for Samples.</description>
        <label>License Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_vod__c</fullName>
        <description>State License Number for the corresponding State of the Address.</description>
        <label>License #</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Id_vod__c</fullName>
        <description>The textual ID of the Location value maintained in the Location_Name_vod field.</description>
        <label>Location Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Name_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Maintains the relationship between the Person Account and the Location of the Call for Person Calls using Call Location and Group Calls with Attendees.</description>
        <label>Location Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Calls (Location Name)</relationshipLabel>
        <relationshipName>Calls_vod</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>